--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
     margin-top: 1%;
     margin-left: 5%;
     margin-right: 5%;
-    border-radius: 50px;
+    border-radius: 20px;
     overflow: hidden;
     width: 90%;
     height: 30px;
@@ -36,17 +36,16 @@ body {
     text-align: center;
     padding: 8px 10px;
     font-size: 20px;
+    text-decoration: none;
+    vertical-align: middle;
+    border-radius: 20px;
 }
 
 .navbar a:hover {
     background-color: #389fffb1;
-    transform: scale(1.1);
+    transform: scale(1.5);
 }
 
-.navbar a.active {
-    background-color: #4273aeb1;
-    color: white;
-}
 
 button {
     border-radius: 12px;
