--- a/styles.css
+++ b/styles.css
@@ -23,12 +23,12 @@ body {
 .navbar {
     background-color: #73b4ffb1;
     margin-top: 1%;
-    margin-left: 5%;
-    margin-right: 5%;
-    border-radius: 20px;
+    margin-left: 2%;
+    margin-right: 2%;
+    border-radius: 10px;
     overflow: hidden;
-    width: 90%;
-    height: 30px;
+    width: 100%;
+    height: 40px;
 }
 
 .navbar a {
@@ -37,13 +37,13 @@ body {
     padding: 8px 10px;
     font-size: 20px;
     text-decoration: none;
-    vertical-align: middle;
-    border-radius: 20px;
+    vertical-align: baseline;
+    border-radius: 10px;
 }
 
 .navbar a:hover {
     background-color: #389fffb1;
-    transform: scale(1.5);
+    transform: scale(1.25);
 }
 
 
