--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,16 @@ body {
     transform: scale(1.1);
 }
 
+.navbar p {
+    color: #ffffff;
+    text-align: center;
+    padding: 8px 10px;
+    font-size: 20px;
+    text-decoration: none;
+    vertical-align: baseline;
+    border-radius: 10px;
+}
+
 
 button {
     border-radius: 12px;
