--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,11 @@ body {
     height: 40px;
 }
 
+.navbar:hover {
+    background-color: #58a3fab1;
+    transform: scale(1.1);
+}
+
 .navbar a {
     color: #ffffff;
     text-align: center;
@@ -53,6 +58,10 @@ body {
     text-decoration: none;
     vertical-align: baseline;
     border-radius: 10px;
+    padding-bottom: 40%; 
+    font-weight: bold; 
+    margin-top: 5px;
+    background-color: cornflowerblue;
 }
 
 
