--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ body {
 
 .navbar a:hover {
     background-color: #389fffb1;
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 .navbar p {
@@ -62,6 +62,8 @@ body {
     font-weight: bold; 
     margin-top: 5px;
     background-color: cornflowerblue;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 
