--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ body {
   }
 
     
-.link-button:hover {
+a .link-button:hover {
     transform: scale(1.1);
     background-color: #008cff8b;
   }
